# apps/auth-service/src/routes/auth.router.ts
@@ -1,5 +1,6 @@
 import express, { Router } from "express";
-import { loginUser, userRegistrationController, verifyUser } from "../controller/auth.controller";
+import { loginUser, userForgetPassword, userRegistrationController, userResetPassword, verifyUser } from "../controller/auth.controller";
+import { verifyForgetPasswordOTP } from "../utils/auth.helper";
 
 
 const router: Router = express.Router();
@@ -8,6 +9,10 @@ const router: Router = express.Router();
 router.post("/user-registeration", userRegistrationController);
 router.post("/verify-user", verifyUser);
 router.post("/login-user", loginUser);
+router.post("/forgot-password-user",userForgetPassword )
+router.post("/reset-password-user",userResetPassword )
+router.post("/verify-forgot-password-user",verifyForgetPasswordOTP )
+
 
 
 
